# sha3sum-rs

./: Cargo.toml  README.md
src/: main.rs
