[package]
name = "sha3sum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha3 = "*"
hex = "*"
clap = { version = "*", features = ["color", "error-context", "help", "std", "suggestions", "usage", "derive"] }
